@@ -26,7 +26,7 @@ error_reporting(E_ALL);
 require_once BASEPATH.'config.php';
 require_once BASEPATH.'classes/AbstractDb.php';
 require_once BASEPATH.'classes/Session.php';
-define('REQUIRED_SCHEMA_VERSION', 19);
+define('REQUIRED_SCHEMA_VERSION', 20);
 
 /** Check that the database schema is up to date.  If it isn't, offer to update it. */
 function validate_schema()
@@ -461,6 +461,15 @@ function update_schema()
             $sql .= "width int4,";
             $sql .= "height int4";
             $sql .= ");\n";
+        }
+        
+        $new_schema_version = 20;
+        if($schema_version < $new_schema_version)
+        {
+            echo "<h2>Preparing SQL statements to update schema to version  $new_schema_version</h2>\n";
+            $sql .= "\n\nUPDATE schema_info SET value='$new_schema_version' WHERE tag='schema_version';\n"; 
+            $sql .= "ALTER TABLE nodes ADD COLUMN latitude NUMERIC(16, 6);\n";
+            $sql .= "ALTER TABLE nodes ADD COLUMN longitude NUMERIC(16, 6);\n";
         }
         
 		$db->ExecSqlUpdate("BEGIN;\n$sql\nCOMMIT;\n", true);
